Fri Dec 17 16:44:26 2004  Tanaka Akira  <akr@m17n.org>

	* configure.in (ac_cv_sizeof_rlim_t): set 8 for BSD/OS.
	  Reported by OHARA Shigeki.  [ruby-dev:25236]

Fri Dec 17 16:28:12 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: fix bug on setting up system encoding

	* ext/tk/lib/tk/event.rb: fix error on require process

	* ext/tk/lib/font.rb: fix abnormal termination error on Windows

	* ext/tk/lib/tk/virtevent.rb: TkVirtualEvent::PreDefVirtEvent.new()
	  accepts event-sequence arguments

	* ext/tk/lib/text.rb: fail to dump embedded images

	* ext/tk/lib/text.rb: tag_nextrange and tag_prevrange returns wrong
	  types of values

	* ext/tk/lib/texttag.rb: nextrange and prevrange returns wrong
	  types of values

	* ext/tk/lib/text.rb: add TkText::IndexModMethods module and
	  TkText::IndexString class to treat text index modifiers

	* ext/tk/lib/texttag.rb: use TkText::IndexModMethods module

	* ext/tk/lib/textmark.rb: ditto

	* ext/tk/lib/textimage.rb: ditto

	* ext/tk/lib/textwindow.rb: ditto

	* ext/tk/lib/textimage.rb: wrong gravity of text mark for embedded
	  image

	* ext/tk/lib/textwindow.rb: wrong gravity of text mark for
	  embedded window

Fri Dec 17 13:33:58 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/cgi/session.rb (CGI::Session#initialize): control adding
	  session_id hidden fields.  fixed: [ruby-talk:123850]

Sun Dec 17 00:01:48 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_proc_arity, rb_node_arity, rb_mod_method_arity,
	  rb_obj_method_arity): new functions to obtain method arity.
	  [ruby-dev:25143]

Thu Dec 16 23:31:13 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): create RUBYARCHDIR also when no extension
	  is installed.  fixed: [ruby-dev:25215]

Thu Dec 16 22:36:57 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/drb/test_drb.rb: adjust and reduce sleep.

Thu Dec 16 18:37:08 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>
